[project]
name = "re_portal"
authors = [{ name = "Kreatao", email = "dev@kreatao.com" }]
description = "GCC Real Estate Platform - Public Listing Portal & Tenant Self-Service (Frappe v16)"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0-dev,<17.0.0"
erpnext = ">=16.0.0-dev,<17.0.0"
